Add JNG to formats.html.  More web page updates.

--- a/www/cvs.html
+++ b/www/cvs.html
@@ -270,7 +270,7 @@ look for the latest version of CVS is at the <A HREF="http://www.cvshome.org/">C
 Home Page </A>. There is also a lot of infomation and documentation
 about CVS available. 
 </DD><HR>
-<P><A HREF="../Open ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic9" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><A HREF="mailto:webmaster@imagemagick.org"><IMG SRC="../images/mail.png" NAME="Graphic10" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=1>
+<P><A HREF="../ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic9" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><A HREF="mailto:webmaster@imagemagick.org"><IMG SRC="../images/mail.png" NAME="Graphic10" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=1>
 Image manipulation software that works like magic.</FONT> 
 </P>
 </BODY>
