--- a/www/identify.html
+++ b/www/identify.html
@@ -147,7 +147,7 @@ following, until the set is terminated by the appearance of any option
 or <strong>-noop</strong>.
 <p>
 For a more detailed description of each option, see
-<a href="Open ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
+<a href="ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
 <br>&nbsp;<br>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -157,7 +157,7 @@ For a more detailed description of each option, see
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-authenticate">-authenticate</a> <i>&lt;string&gt;</i>
+    <a href="ImageMagick.html#details-authenticate">-authenticate</a> <i>&lt;string&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>decrypt image with this password</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -168,7 +168,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-cache">-cache</a> <i>&lt;threshold&gt;</i>
+    <a href="ImageMagick.html#details-cache">-cache</a> <i>&lt;threshold&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>megabytes of memory available to the pixel cache</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -190,7 +190,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-density">-density</a> <i>&lt;width&gt;x&lt;height&gt;</i>
+    <a href="ImageMagick.html#details-density">-density</a> <i>&lt;width&gt;x&lt;height&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>vertical and horizontal resolution in pixels of the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -201,7 +201,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-depth">-depth</a> <i>&lt;value&gt;</i>
+    <a href="ImageMagick.html#details-depth">-depth</a> <i>&lt;value&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>depth of the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -212,7 +212,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-format">-format</a> <i>&lt;string&gt;</i>
+    <a href="ImageMagick.html#details-format">-format</a> <i>&lt;string&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>output formatted image characteristics</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -234,7 +234,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-interlace">-interlace</a> <i>&lt;type&gt;</i>
+    <a href="ImageMagick.html#details-interlace">-interlace</a> <i>&lt;type&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>the type of interlacing scheme</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -245,7 +245,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-limit">-limit</a> <i>&lt;type&gt; &lt;value&gt;</i>
+    <a href="ImageMagick.html#details-limit">-limit</a> <i>&lt;type&gt; &lt;value&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>Disk, Map, or Memory resource limit</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -256,7 +256,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-log">-log</a> <i>&lt;string&gt;</i>
+    <a href="ImageMagick.html#details-log">-log</a> <i>&lt;string&gt;</i>
 </font></font></font></b></td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -277,7 +277,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-sampling-factor">-sampling-factor</a> <i>&lt;horizontal_factor&gt;x&lt;vertical_factor&gt;</i>
+    <a href="ImageMagick.html#details-sampling-factor">-sampling-factor</a> <i>&lt;horizontal_factor&gt;x&lt;vertical_factor&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>sampling factors used by JPEG or MPEG-2 encoder and YUV decoder/encoder.</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -288,7 +288,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-size">-size</a> <i>&lt;width&gt;x&lt;height&gt;</i>{<i>+offset</i>}<i></i>
+    <a href="ImageMagick.html#details-size">-size</a> <i>&lt;width&gt;x&lt;height&gt;</i>{<i>+offset</i>}<i></i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>width and height of the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -299,7 +299,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-verbose">-verbose</a>
+    <a href="ImageMagick.html#details-verbose">-verbose</a>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print detailed information about the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -310,12 +310,12 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-version">-version</a>
+    <a href="ImageMagick.html#details-version">-version</a>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print Open ImageMagick version string</td></tr></table>
 <p>
 For a more detailed description of each option, see
-<a href="Open ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
+<a href="ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
 <br>&nbsp;<br>
 </td></tr></table>
      <p>
@@ -385,7 +385,7 @@ authorization from the Open ImageMagick Studio.</strong>
 <i><a href="#top">Back to Contents</a></i> 
 &nbsp;</p>
 <hr>
-<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
 ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
