--- a/www/quantize.html
+++ b/www/quantize.html
@@ -16,7 +16,7 @@
 <center><img SRC="../images/magick_small.png" alt="" width="114" height="118"></center>
 
 <p><br>
-<p>This document describes how <a href="../Open ImageMagick.html">Open ImageMagick</a>
+<p>This document describes how <a href="../ImageMagick.html">Open ImageMagick</a>
 performs color reduction on an image. To fully understand this document,
 you should have a knowledge of basic imaging techniques and the tree data
 structure and terminology.
@@ -341,7 +341,7 @@ from the Open ImageMagick Studio.</b></dd>
 </dl>
 
 <hr>
-<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
 ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
