--- a/www/windows.html
+++ b/www/windows.html
@@ -118,11 +118,11 @@ installation, it will display what it is doing in an installation
 progress window. 
 </P>
 <H4 CLASS="western">Finishing Up</H4>
-<P CLASS="western">By default &ldquo;View Open ImageMagick.html&rdquo; is
+<P CLASS="western">By default &ldquo;View ImageMagick.html&rdquo; is
 check-marked. This causes the Open ImageMagick web pages to be displayed
 in a browser when &ldquo;Finish&rdquo; is selected. If you do not
 want to view the web pages, then de-select &ldquo;View
-Open ImageMagick.html&rdquo;. Select &ldquo;Finish&rdquo; to exit the
+ImageMagick.html&rdquo;. Select &ldquo;Finish&rdquo; to exit the
 installation program. <BR>Under Windows '95 and Windows '98 it will
 be necessary to reboot the system in order for some settings to take
 effect (such as executable search path) since these are set in
@@ -560,7 +560,7 @@ matching installation via these registry entries.</P>
 <P CLASS="western" STYLE="margin-bottom: 0in"><BR>
 </P>
 <HR>
-<P CLASS="western"><A HREF="../Open ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic5" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><A HREF="mailto:webmaster@imagemagick.org"><IMG SRC="../images/mail.png" NAME="Graphic6" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=1>
+<P CLASS="western"><A HREF="../ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic5" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><A HREF="mailto:webmaster@imagemagick.org"><IMG SRC="../images/mail.png" NAME="Graphic6" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=1>
 Image manipulation software that works like magic.</FONT> 
 </P>
 </BODY>
