--- a/www/QuickStart.html
+++ b/www/QuickStart.html
@@ -335,7 +335,7 @@ Next, type</P>
 <P CLASS="code-western">@make</P>
 <P CLASS="code-western">identify -verbose logo:</P>
 <HR>
-<P><A HREF="../Open ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic3" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><A HREF="mailto:webmaster@imagemagick.org"><IMG SRC="../images/mail.png" NAME="Graphic8" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=1>
+<P><A HREF="../ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic3" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><A HREF="mailto:webmaster@imagemagick.org"><IMG SRC="../images/mail.png" NAME="Graphic8" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=1>
 Image manipulation software that works like magic.</FONT> 
 </P>
 </BODY>
