--- a/www/api.html
+++ b/www/api.html
@@ -243,7 +243,7 @@ to display a smiley face on your X server.
 For C++, use:
 <pre>&nbsp;&nbsp;&nbsp; g++ `Magick++-config --cxxflags --cppflags` demo.cpp `Magick++-config --ldflags --libs`</pre>
 <hr>
-<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
 ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
