--- a/www/archives.html
+++ b/www/archives.html
@@ -627,7 +627,7 @@ it means the site has reached its limit of anonymous users. You will
 need to try another site or try again later. 
 </P>
 <HR>
-<P><A HREF="../Open ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic2" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><A HREF="mailto:webmaster@imagemagick.org"><IMG SRC="../images/mail.png" NAME="Graphic3" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=1>
+<P><A HREF="../ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic2" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><A HREF="mailto:webmaster@imagemagick.org"><IMG SRC="../images/mail.png" NAME="Graphic3" ALT="Open ImageMagick Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=1>
 Image manipulation software that works like magic.</FONT> 
 </P>
 </BODY>
