--- a/www/cd.html
+++ b/www/cd.html
@@ -38,7 +38,7 @@ volunteering to burn these CD's.
 <p>Note, I have 50 Open ImageMagick CD's left. When they are gone I cannot guarantee 
 that more will be produced.
 <hr>
-<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
 ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
