--- a/www/color.html
+++ b/www/color.html
@@ -1780,7 +1780,7 @@ Open ImageMagick understands color names or hex values (.e.g. white or #ffffff).
 </table>
 <p>
 <hr>
-<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
 ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
