--- a/www/conjure.html
+++ b/www/conjure.html
@@ -191,7 +191,7 @@ be three different keywords.
 <br>&nbsp;<br>
 <p>
 For a more detailed description of each option, see
-<a href="Open ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
+<a href="ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
 <br>&nbsp;<br>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -223,7 +223,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-log">-log</a> <i>&lt;string&gt;</i>
+    <a href="ImageMagick.html#details-log">-log</a> <i>&lt;string&gt;</i>
 </font></font></font></b></td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -233,7 +233,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-verbose">-verbose</a>
+    <a href="ImageMagick.html#details-verbose">-verbose</a>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print detailed information about the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -244,7 +244,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="Open ImageMagick.html#details-version">-version</a>
+    <a href="ImageMagick.html#details-version">-version</a>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print Open ImageMagick version string</td></tr></table>
 </td></tr></table>
@@ -485,7 +485,7 @@ authorization from the Open ImageMagick Studio.</strong>
 <i><a href="#top">Back to Contents</a></i> 
 &nbsp;</p>
 <hr>
-<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
 ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
