--- a/www/help.html
+++ b/www/help.html
@@ -52,7 +52,7 @@ Here is a list of tasks you can do to contribute to this effort:
 	Open ImageMagick.</P>
 </UL>
 <HR>
-<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
 ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
