--- a/www/miff.html
+++ b/www/miff.html
@@ -37,7 +37,7 @@
 <P ALIGN=CENTER><IMG SRC="../images/magick_small.png" NAME="Graphic1" ALIGN=BOTTOM WIDTH=114 HEIGHT=118 BORDER=0></P>
 <P><B>Magick Image File Format (MIFF)</B> is a platform-independent
 format for storing bitmap images. <B>MIFF</B> is a part of the
-<A HREF="../Open ImageMagick.html">Open ImageMagick</A> toolkit of image
+<A HREF="../ImageMagick.html">Open ImageMagick</A> toolkit of image
 manipulation utilities for the <I>X Window System</I>. <B>Open ImageMagick</B>
 is capable of converting many different image file formats to and
 from <B>MIFF</B> (<I>e.g.</I> <B>JPEG, XPM, TIFF,</B> <I>etc.</I>). 
@@ -664,7 +664,7 @@ Open ImageMagick without prior written authorization from the Open ImageMagick
 Studio. 
 </P>
 <HR>
-<P><A HREF="../Open ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic5" ALT="Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=2>
+<P><A HREF="../ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic5" ALT="Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=2>
 Image manipulation software that works like magic.</FONT></P>
 </BODY>
 </HTML>
