--- a/www/perl.html
+++ b/www/perl.html
@@ -74,7 +74,7 @@ Introduction</font></font></font></b></td>
 </table>
 <dd> <a href="archives.html">PerlMagick</a> is an objected-oriented
 <a href="http://www.perl.com/perl/">Perl</a>
-interface to <a href="../Open ImageMagick.html">Open ImageMagick</a>. Use
+interface to <a href="../ImageMagick.html">Open ImageMagick</a>. Use
 the module to read, manipulate, or write an image or image sequence from
 within a Perl script. This makes it very suitable for Web CGI scripts. You
 must have <b>Open ImageMagick</b> 5.4.3 or above and Perl version 5.005_02 or greater
@@ -1964,7 +1964,7 @@ the Open ImageMagick Studio.</b></dd>
                                                             </dl>
  <a href="#contents">Back to Contents</a>
                                                             <hr>
-<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
 ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
